--- a/presentation/src/main/res/menu/bottom_nav_menu.xml
+++ b/presentation/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_nav_home_black_24dp"
+        android:title="@string/title_home"
+        app:showAsAction = "always" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_myfridge"
+        android:icon="@drawable/ic_nav_myfridge_black_24dp"
+        android:title="@string/title_myfridge"
+        app:showAsAction = "always" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_recipe"
+        android:icon="@drawable/ic_nav_recipe_black_24dp"
+        android:title="@string/title_recipe"
+        app:showAsAction = "always" />
+
+    <item
+        android:id="@+id/navigation_mypage"
+        android:icon="@drawable/ic_nav_mypage_black_24dp"
+        android:title="@string/title_mypage"
+        app:showAsAction = "always" />
 
 </menu>
