--- a/presentation/src/main/res/layout/fragment_main_home.xml
+++ b/presentation/src/main/res/layout/fragment_main_home.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.home.HomeFragment">
+        tools:context=".views.main.fragment.HomeFragment">
 
         <TextView
             android:id="@+id/text_home"
