--- a/presentation/src/main/res/layout/fragment_main_myfridge.xml
+++ b/presentation/src/main/res/layout/fragment_main_myfridge.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.myfridge.MyFridgeFragment">
+        tools:context=".views.main.fragment.MyFridgeFragment">
 
         <TextView
             android:id="@+id/text_dashboard"
