--- a/presentation/src/main/res/layout/fragment_main_recipe.xml
+++ b/presentation/src/main/res/layout/fragment_main_recipe.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.recipe.RecipeFragment">
+        tools:context=".views.main.fragment.RecipeFragment">
 
         <TextView
             android:id="@+id/text_notifications"
