--- a/presentation/src/main/res/layout/activity_location.xml
+++ b/presentation/src/main/res/layout/activity_location.xml
@@ -10,24 +10,20 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/location_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.main.fragment.RecipeFragment">
+        tools:context=".views.location.LocationActivity">
 
         <TextView
-            android:id="@+id/text_notifications"
+            android:id="@+id/text_location"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:textAlignment="center"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text = "frag recipe" />
+            android:text="location"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
