--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -9,38 +9,111 @@
 
     </data>
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/parent_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.MainActivity">
+        tools:context=".views.MainActivity"
+        android:background="@color/design_default_color_primary">
 
-        <include layout="@layout/activity_mypage" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content"
+            android:background="@color/design_default_color_primary_variant"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <FrameLayout
-                android:id="@+id/main_container"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@id/bottom_nav"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_nav"
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="?android:attr/windowBackground"
-                app:labelVisibilityMode="labeled"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:menu="@menu/bottom_nav_menu" />
+                android:text="@string/app_name"
+                android:textColor="@color/design_default_color_on_primary"
+                android:textSize="20dp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.appcompat.widget.Toolbar>
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+        <FrameLayout
+            android:id="@+id/main_search_layout"
+            android:onClick="onButtonClicked"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="12dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintDimensionRatio="H,8:1"
+            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/shape_rounded_bottom" >
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/main_search_button"
+                android:onClick="onButtonClicked"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginLeft="12dp"
+                android:background="@color/design_default_color_on_primary"/>
+
+        </FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/main_myfridge_button"
+            android:onClick="onButtonClicked"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintTop_toBottomOf="@+id/main_search_layout"
+            app:layout_constraintRight_toLeftOf="@+id/main_recipe_button"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/shape_rounded"
+            android:text="@string/button_myfridge" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/main_recipe_button"
+            android:onClick="onButtonClicked"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginLeft="4dp"
+            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintTop_toBottomOf="@+id/main_search_layout"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/main_myfridge_button"
+            android:background="@drawable/shape_rounded"
+            android:text="@string/button_recipe" />
+
+        <FrameLayout
+            android:id="@+id/main_ingr_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintDimensionRatio="H,6:1"
+            app:layout_constraintTop_toBottomOf="@+id/main_myfridge_button"
+            android:background="@drawable/shape_rounded">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="임박식재 진열"/>
+
+        </FrameLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
