Feat:: main 화면 변경
- main 화면 변경
- 폰트 추가

--- a/presentation/src/main/res/layout/activity_search.xml
+++ b/presentation/src/main/res/layout/activity_search.xml
@@ -10,16 +10,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/myfridge_layout"
+        android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.myfridge.MyFridgeActivity">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="myfridge" />
+        tools:context=".views.search.SearchActivity"
+        android:background="@color/design_default_color_on_primary">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
