--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".views.MainActivity"
-        android:background="@color/design_default_color_primary">
+        android:background="@color/white">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
                 android:textColor="@color/design_default_color_on_primary"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -47,7 +47,7 @@
             app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/shape_rounded_bottom" >
+            android:background="@drawable/shape_main_layout_search" >
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/main_search_button"
@@ -58,7 +58,12 @@
                 android:layout_marginBottom="14dp"
                 android:layout_marginRight="12dp"
                 android:layout_marginLeft="12dp"
-                android:background="@color/design_default_color_on_primary"/>
+                android:paddingStart="6dp"
+                android:background="@color/design_default_color_on_primary"
+                android:text="@string/main_search"
+                android:gravity="center_vertical"
+                android:textColor="@color/pale"
+                android:drawableStart="@drawable/ic_action_search_24dp"/>
 
         </FrameLayout>
 
@@ -69,13 +74,13 @@
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="6dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintTop_toBottomOf="@+id/main_search_layout"
             app:layout_constraintRight_toLeftOf="@+id/main_recipe_button"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/shape_rounded"
+            android:background="@drawable/shape_main_button_temp"
             android:text="@string/button_myfridge" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -85,34 +90,87 @@
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginStart="4dp"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintTop_toBottomOf="@+id/main_search_layout"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/main_myfridge_button"
-            android:background="@drawable/shape_rounded"
+            android:background="@drawable/shape_main_button_temp"
             android:text="@string/button_recipe" />
 
-        <FrameLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_ingr_layout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginRight="12dp"
             android:layout_marginLeft="12dp"
-            app:layout_constraintDimensionRatio="H,6:1"
+            app:layout_constraintDimensionRatio="H,14:3"
             app:layout_constraintTop_toBottomOf="@+id/main_myfridge_button"
-            android:background="@drawable/shape_rounded">
+            android:background="@drawable/shape_main_layout_ingr">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="임박식재 진열"/>
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:fillViewport="true"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/main_add_layout">
 
-        </FrameLayout>
+                <LinearLayout
+                    android:id="@+id/main_ingr_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
+            <FrameLayout
+                android:id="@+id/main_add_layout"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right"
+                app:layout_constraintDimensionRatio="H,3:2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:background="@drawable/shape_main_button_add" >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_main_add_24dp"
+                    android:scaleType="centerInside" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/main_add_button"
+                    android:onClick="onButtonClicked"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparent" />
+
+            </FrameLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/main_buy_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintDimensionRatio="H,2:1"
+            app:layout_constraintTop_toBottomOf="@+id/main_ingr_layout"
+            android:background="@drawable/shape_main_layout_ingr">
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
