--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="pale">#FF808080</color>
+    <color name="transparent">#00ff0000</color>
+    <color name="red">#FF900020</color>
 </resources>
