--- a/presentation/src/main/res/layout/fragment_myfridge.xml
+++ b/presentation/src/main/res/layout/fragment_myfridge.xml
@@ -9,10 +9,17 @@
 
     </data>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="asdf"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="myfridge"
+            android:textSize="100dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
