--- a/presentation/src/main/res/layout/fragment_search.xml
+++ b/presentation/src/main/res/layout/fragment_search.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="mypage"
+            android:text="search"
             android:textSize="100dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
