--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/mainFragment" >
 
     <fragment
         android:id="@+id/mainFragment"
@@ -10,11 +10,33 @@
         android:label="MainFragment" >
 
         <action
-            android:id="@+id/action_mainFragment_to_myfridgeFragment"
-            app:destination="@id/myfridgeFragment" />
-        <action
             android:id="@+id/action_mainFragment_to_mypageFragment"
-            app:destination="@id/mypageFragment" />
+            app:destination="@id/mypageFragment"
+            app:enterAnim="@anim/anim_rightin"
+            app:exitAnim="@anim/anim_fadeout"
+            app:popEnterAnim="@anim/anim_fadein"
+            app:popExitAnim="@anim/anim_rightout" />
+        <action
+            android:id="@+id/action_mainFragment_to_searchFragment"
+            app:destination="@id/searchFragment"
+            app:enterAnim="@anim/anim_rightin"
+            app:exitAnim="@anim/anim_fadeout"
+            app:popEnterAnim="@anim/anim_fadein"
+            app:popExitAnim="@anim/anim_rightout" />
+        <action
+            android:id="@+id/action_mainFragment_to_myfridgeFragment"
+            app:destination="@id/myfridgeFragment"
+            app:enterAnim="@anim/anim_rightin"
+            app:exitAnim="@anim/anim_fadeout"
+            app:popEnterAnim="@anim/anim_fadein"
+            app:popExitAnim="@anim/anim_rightout" />
+        <action
+            android:id="@+id/action_mainFragment_to_recipeFragment"
+            app:destination="@id/recipeFragment"
+            app:enterAnim="@anim/anim_rightin"
+            app:exitAnim="@anim/anim_fadeout"
+            app:popEnterAnim="@anim/anim_fadein"
+            app:popExitAnim="@anim/anim_rightout" />
     </fragment>
 
     <fragment
@@ -26,5 +48,13 @@
         android:id="@+id/mypageFragment"
         android:name="com.fridgerescuer.presentation.views.mypage.MypageFragment"
         android:label="MypageFragment" />
+    <fragment
+        android:id="@+id/recipeFragment"
+        android:name="com.fridgerescuer.presentation.views.recipe.RecipeFragment"
+        android:label="RecipeFragment" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.fridgerescuer.presentation.views.search.SearchFragment"
+        android:label="SearchFragment" />
 
 </navigation>
