--- a/presentation/src/main/res/layout/fragment_diet.xml
+++ b/presentation/src/main/res/layout/fragment_diet.xml
@@ -12,6 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:context=".views.diet.DietFragment"
         android:background="@color/white">
 
         <TextView
