--- a/presentation/src/main/res/layout/fragment_my_ingr.xml
+++ b/presentation/src/main/res/layout/fragment_my_ingr.xml
@@ -10,19 +10,16 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/location_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.main.mypage.MypageActivity" >
+        tools:context=".views.myfridge.myingr.MyIngrFragment"
+        android:background="@color/white">
 
         <TextView
-            android:id="@+id/text_drawer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:text="drawer"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="myingr"
+            android:textSize="100dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
