--- a/presentation/src/main/res/layout/fragment_add_ingr.xml
+++ b/presentation/src/main/res/layout/fragment_add_ingr.xml
@@ -95,27 +95,43 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/ingr_image">
+                    app:layout_constraintTop_toBottomOf="@id/ingr_image"
+                    android:orientation="vertical"
+                    android:padding="12dp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/name_edit_layout"
-                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="먹거리 이름" >
+                        android:hint="먹거리 이름"
+                        app:errorEnabled="true" >
 
                         <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                            android:id="@+id/name_edit_view"
+                            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-
-                            android:paddingTop="30dp"
-                            android:paddingBottom="10dp"
-                            android:paddingHorizontal="15dp"
-                            android:textSize="16sp"
-                            android:completionHint="이름"
-                            android:completionThreshold="1"/>
+                            android:completionThreshold="1"
+                            android:textSize="16sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" >
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <com.google.android.material.button.MaterialButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
