addingr UI 마무리, adapter 에러 해결
- addingr UI, fragment 마무리
- E/RecyclerView: No adapter attached 에러 해결

--- a/presentation/src/main/res/drawable/ripple_ingr_add_button_image.xml
+++ b/presentation/src/main/res/drawable/ripple_ingr_add_button_image.xml
@@ -6,7 +6,7 @@
 
         <shape android:shape="oval">
 
-            <solid android:color="@color/black" />
+            <solid android:color="@color/mtrl_btn_text_btn_ripple_color" />
 
             <corners android:radius="10dip" />
 
