--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="pale">#FF808080</color>
     <color name="transparent">#00ff0000</color>
     <color name="red">#FF900020</color>
+    <color name="green">#FF008000</color>
 </resources>
