--- a/presentation/src/main/res/layout/fragment_main.xml
+++ b/presentation/src/main/res/layout/fragment_main.xml
@@ -106,7 +106,7 @@
                             app:layout_constraintRight_toLeftOf="@+id/recipe_button"
                             app:layout_constraintLeft_toLeftOf="parent"
                             android:background="@drawable/ripple_main_button_temp"
-                            android:text="@string/button_myfridge" />
+                            android:text="@string/main_button_myfridge" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/recipe_button"
@@ -123,7 +123,7 @@
                             app:layout_constraintRight_toLeftOf="@id/diet_button"
                             app:layout_constraintLeft_toRightOf="@id/myfridge_button"
                             android:background="@drawable/ripple_main_button_temp"
-                            android:text="@string/button_recipe" />
+                            android:text="@string/main_button_recipe" />
 
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/diet_button"
@@ -140,7 +140,7 @@
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintLeft_toRightOf="@+id/recipe_button"
                             android:background="@drawable/ripple_main_button_temp"
-                            android:text="@string/button_diet" />
+                            android:text="@string/main_button_diet" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/ingr_layout"
@@ -157,6 +157,7 @@
 
                             <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/ingr_recycler_view"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:orientation="horizontal"
