presentation addingr 부분 수정
- ingrDB -> myIngrDB로 이름 변경
- presentation의 addingr bitmap 처리
- UI, view, viewmodel간 정보전달 구현

--- a/presentation/src/main/res/layout/fragment_main.xml
+++ b/presentation/src/main/res/layout/fragment_main.xml
@@ -163,7 +163,7 @@
                                 android:orientation="horizontal"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintEnd_toStartOf="@id/add_layout"
-                                bind:setIngrSamples="@{vm.ingrSampleList}" />
+                                bind:setIngrSamples="@{vm.myIngrSampleList}" />
 
                             <com.facebook.shimmer.ShimmerFrameLayout
                                 android:id="@+id/ingr_shimmer"
