--- a/presentation/src/main/res/layout/item_ingr_sample.xml
+++ b/presentation/src/main/res/layout/item_ingr_sample.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="model"
-            type="com.fridgerescuer.domain.model.ingr.IngrSample" />
+            type="com.fridgerescuer.domain.model.myingr.MyIngrSample" />
         <variable
             name="vm"
             type="com.fridgerescuer.presentation.views.main.MainViewModel" />
