--- a/presentation/src/main/res/layout/fragment_add_ingr.xml
+++ b/presentation/src/main/res/layout/fragment_add_ingr.xml
@@ -54,7 +54,8 @@
                         android:background="@color/background"
                         android:scaleType="centerCrop"
                         app:layout_constraintDimensionRatio="H,7:5"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        bind:setBitmapImage="@{vm.image}" />
 
                     <LinearLayout
                         android:id="@+id/temp_layout"
@@ -98,11 +99,11 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/ingr_image"
                         android:orientation="vertical"
-                        android:padding="12dp">
+                        android:padding="12dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/ingr_image">
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/name_edit_layout"
@@ -110,8 +111,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="6dp"
-                            app:boxStrokeColor="@drawable/selector_add_ingr_name"
-                            android:hint="@string/add_ingr_name">
+                            android:hint="@string/add_ingr_name_hint"
+                            app:boxStrokeColor="@drawable/selector_add_ingr_name">
 
                             <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                 android:id="@+id/name_edit_view"
@@ -119,6 +120,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:completionThreshold="1"
+                                android:text="@={vm.name}"
                                 android:textSize="16sp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
@@ -126,47 +128,47 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginVertical="6dp" >
+                            android:layout_marginVertical="6dp">
 
                             <TextView
                                 android:id="@+id/exp_date_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="3dp"
-                                app:layout_constraintTop_toTopOf="parent"
+                                android:text="@string/add_ingr_exp"
                                 app:layout_constraintBottom_toTopOf="@id/exp_date_button"
                                 app:layout_constraintStart_toStartOf="@id/exp_date_button"
-                                android:text="@string/add_ingr_exp" />
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/exp_date_button"
-                                android:onClick="onButtonClicked"
                                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="6dp"
                                 android:layout_marginBottom="6dp"
+                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
                                 android:insetTop="0dp"
                                 android:insetBottom="0dp"
-                                app:layout_constraintTop_toBottomOf="@id/exp_date_text"
+                                android:onClick="onButtonClicked"
+                                android:text="@{vm.expDate}"
+                                android:textAppearance="?attr/textAppearanceSubtitle1"
+                                android:textColor="@color/m3_textfield_input_text_color"
                                 app:layout_constraintBottom_toTopOf="@id/use_date_text"
                                 app:layout_constraintEnd_toStartOf="@id/storage_spinner"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:strokeColor="@color/red"
-                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
-                                android:textAppearance="?attr/textAppearanceSubtitle1"
-                                android:textColor="@color/m3_textfield_input_text_color"
-                                android:text="@{vm.expDate}" />
+                                app:layout_constraintTop_toBottomOf="@id/exp_date_text"
+                                app:strokeColor="@color/red" />
 
                             <TextView
                                 android:id="@+id/storage_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="3dp"
-                                app:layout_constraintTop_toTopOf="parent"
+                                android:text="@string/add_ingr_storage"
                                 app:layout_constraintBottom_toTopOf="@id/storage_spinner"
                                 app:layout_constraintStart_toStartOf="@id/storage_spinner"
-                                android:text="@string/add_ingr_storage"/>
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <Spinner
                                 android:id="@+id/storage_spinner"
@@ -174,15 +176,15 @@
                                 android:layout_height="0dp"
                                 android:layout_marginStart="6dp"
                                 android:layout_marginBottom="6dp"
+                                android:background="@drawable/shape_ingr_add_button_spinner"
                                 android:paddingHorizontal="@dimen/mtrl_btn_padding_left"
                                 android:paddingVertical="@dimen/mtrl_btn_padding_top"
+                                android:textAppearance="?attr/textAppearanceSubtitle1"
+                                android:textColor="@color/m3_textfield_input_text_color"
                                 app:layout_constraintBottom_toTopOf="@id/buy_date_text"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toEndOf="@id/exp_date_button"
-                                app:layout_constraintTop_toBottomOf="@id/storage_text"
-                                android:background="@drawable/shape_ingr_add_button_spinner"
-                                android:textAppearance="?attr/textAppearanceSubtitle1"
-                                android:textColor="@color/m3_textfield_input_text_color" />
+                                app:layout_constraintTop_toBottomOf="@id/storage_text" />
 
                             <TextView
                                 android:id="@+id/use_date_text"
@@ -190,30 +192,30 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="6dp"
                                 android:layout_marginBottom="3dp"
-                                app:layout_constraintTop_toBottomOf="@id/exp_date_button"
+                                android:text="@string/add_ingr_use"
                                 app:layout_constraintBottom_toTopOf="@id/use_date_button"
                                 app:layout_constraintStart_toStartOf="@id/use_date_button"
-                                android:text="@string/add_ingr_use"/>
+                                app:layout_constraintTop_toBottomOf="@id/exp_date_button" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/use_date_button"
-                                android:onClick="onButtonClicked"
                                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_marginBottom="6dp"
                                 android:layout_marginEnd="6dp"
+                                android:layout_marginBottom="6dp"
+                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
                                 android:insetTop="0dp"
                                 android:insetBottom="0dp"
-                                app:layout_constraintTop_toBottomOf="@id/use_date_text"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintEnd_toStartOf="@id/buy_date_button"
-                                app:strokeColor="@color/mtrl_outlined_stroke_color"
-                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
+                                android:onClick="onButtonClicked"
+                                android:text="@{vm.useDate}"
                                 android:textAppearance="?attr/textAppearanceSubtitle1"
                                 android:textColor="@color/m3_textfield_input_text_color"
-                                android:text="@{vm.useDate}"/>
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toStartOf="@id/buy_date_button"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/use_date_text"
+                                app:strokeColor="@color/mtrl_outlined_stroke_color" />
 
                             <TextView
                                 android:id="@+id/buy_date_text"
@@ -221,39 +223,39 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="6dp"
                                 android:layout_marginBottom="3dp"
-                                app:layout_constraintTop_toBottomOf="@id/storage_spinner"
+                                android:text="@string/add_ingr_buy"
                                 app:layout_constraintBottom_toTopOf="@id/buy_date_button"
                                 app:layout_constraintStart_toStartOf="@id/buy_date_button"
-                                android:text="@string/add_ingr_buy"/>
+                                app:layout_constraintTop_toBottomOf="@id/storage_spinner" />
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/buy_date_button"
-                                android:onClick="onButtonClicked"
                                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="6dp"
+                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
                                 android:insetTop="0dp"
                                 android:insetBottom="0dp"
-                                app:layout_constraintTop_toBottomOf="@id/buy_date_text"
-                                app:layout_constraintBottom_toBottomOf="@id/use_date_button"
-                                app:layout_constraintStart_toEndOf="@id/use_date_button"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:strokeColor="@color/mtrl_outlined_stroke_color"
-                                android:drawableRight="@drawable/ic_ingr_add_calendar_24dp"
+                                android:onClick="onButtonClicked"
+                                android:text="@{vm.buyDate}"
                                 android:textAppearance="?attr/textAppearanceSubtitle1"
                                 android:textColor="@color/m3_textfield_input_text_color"
-                                android:text="@{vm.buyDate}"/>
+                                app:layout_constraintBottom_toBottomOf="@id/use_date_button"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toEndOf="@id/use_date_button"
+                                app:layout_constraintTop_toBottomOf="@id/buy_date_text"
+                                app:strokeColor="@color/mtrl_outlined_stroke_color" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <TextView
                             android:id="@+id/alert_text"
-                            android:visibility="@{vm.isAlert() ? View.VISIBLE : View.GONE}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:text="@{vm.alertText}"
                             android:textColor="@color/red"
-                            android:text="@{vm.alertText}"/>
+                            android:visibility="@{vm.isAlert() ? View.VISIBLE : View.GONE}" />
 
                     </LinearLayout>
 
