Feat: Retrofit, 자동완성 관련 getIngrList 로직 추가
- data의 ApiClient, ApiInterface
- presentation di의 ApiModule 추가
- okhttp3 logging interceptor, retrofit rxjava adapter, orhanobut logger 종속성 추가
- 자동완성 관련 presentation에 IngrSearchAdapter 추가 및 AddIngr view와 viewmodel 업데이트
- 자동완성 관련 domain에 GetIngrUseCase와 SearchRepository 추가
- 자동완성 관련 data에 ingrlist 가져오는 로직과 presentation에 di 추가

--- a/presentation/src/main/res/layout/fragment_add_ingr.xml
+++ b/presentation/src/main/res/layout/fragment_add_ingr.xml
@@ -116,6 +116,7 @@
 
                             <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                 android:id="@+id/name_edit_view"
+                                android:onTextChanged="@{vm::onTextChanged}"
                                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
